Compiler_Project/Source_Files/generated_source/uCParser.cpp

    #include <map>
    #include "intermediate/symtab/Symtab.h"
    #include "intermediate/type/Typespec.h"
    using namespace intermediate::symtab;
    using namespace intermediate::type;


// Generated from ../Source_Files/antlr/uC.g4 by ANTLR 4.8


#include "uCVisitor.h"

#include "uCParser.h"


using namespace antlrcpp;
using namespace antlr4;

uCParser::uCParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

uCParser::~uCParser() {
  delete _interpreter;
}

std::string uCParser::getGrammarFileName() const {
  return "uC.g4";
}

const std::vector<std::string>& uCParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& uCParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

uCParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<uCParser::FunctionDefinitionContext *> uCParser::ProgramContext::functionDefinition() {
  return getRuleContexts<uCParser::FunctionDefinitionContext>();
}

uCParser::FunctionDefinitionContext* uCParser::ProgramContext::functionDefinition(size_t i) {
  return getRuleContext<uCParser::FunctionDefinitionContext>(i);
}

std::vector<uCParser::FunctionDeclarationContext *> uCParser::ProgramContext::functionDeclaration() {
  return getRuleContexts<uCParser::FunctionDeclarationContext>();
}

uCParser::FunctionDeclarationContext* uCParser::ProgramContext::functionDeclaration(size_t i) {
  return getRuleContext<uCParser::FunctionDeclarationContext>(i);
}

std::vector<uCParser::VariableDeclarationContext *> uCParser::ProgramContext::variableDeclaration() {
  return getRuleContexts<uCParser::VariableDeclarationContext>();
}

uCParser::VariableDeclarationContext* uCParser::ProgramContext::variableDeclaration(size_t i) {
  return getRuleContext<uCParser::VariableDeclarationContext>(i);
}


size_t uCParser::ProgramContext::getRuleIndex() const {
  return uCParser::RuleProgram;
}


antlrcpp::Any uCParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<uCVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

uCParser::ProgramContext* uCParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, uCParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(121);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(114);
        functionDefinition();
        break;
      }

      case 2: {
        setState(115);
        functionDeclaration();
        setState(116);
        match(uCParser::T__0);
        break;
      }

      case 3: {
        setState(118);
        variableDeclaration();
        setState(119);
        match(uCParser::T__0);
        break;
      }

      }
      setState(123); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << uCParser::INT)
      | (1ULL << uCParser::BOOL)
      | (1ULL << uCParser::FLOAT)
      | (1ULL << uCParser::VOID))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- C_statementContext ------------------------------------------------------------------

uCParser::C_statementContext::C_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

uCParser::FunctionDeclarationContext* uCParser::C_statementContext::functionDeclaration() {
  return getRuleContext<uCParser::FunctionDeclarationContext>(0);
}

uCParser::StatementContext* uCParser::C_statementContext::statement() {
  return getRuleContext<uCParser::StatementContext>(0);
}

uCParser::EmptyStatementContext* uCParser::C_statementContext::emptyStatement() {
  return getRuleContext<uCParser::EmptyStatementContext>(0);
}


size_t uCParser::C_statementContext::getRuleIndex() const {
  return uCParser::RuleC_statement;
}


antlrcpp::Any uCParser::C_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<uCVisitor*>(visitor))
    return parserVisitor->visitC_statement(this);
  else
    return visitor->visitChildren(this);
}

uCParser::C_statementContext* uCParser::c_statement() {
  C_statementContext *_localctx = _tracker.createInstance<C_statementContext>(_ctx, getState());
  enterRule(_localctx, 2, uCParser::RuleC_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(134);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(125);
      functionDeclaration();
      setState(126);
      match(uCParser::T__0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(128);
      statement();
      setState(129);
      match(uCParser::T__0);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(131);
      emptyStatement();
      setState(132);
      match(uCParser::T__0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

uCParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

uCParser::AssignmentStatementContext* uCParser::StatementContext::assignmentStatement() {
  return getRuleContext<uCParser::AssignmentStatementContext>(0);
}

uCParser::VariableDeclarationContext* uCParser::StatementContext::variableDeclaration() {
  return getRuleContext<uCParser::VariableDeclarationContext>(0);
}

uCParser::ControlStatementContext* uCParser::StatementContext::controlStatement() {
  return getRuleContext<uCParser::ControlStatementContext>(0);
}

uCParser::PrintStatementContext* uCParser::StatementContext::printStatement() {
  return getRuleContext<uCParser::PrintStatementContext>(0);
}

uCParser::PrintlnStatementContext* uCParser::StatementContext::printlnStatement() {
  return getRuleContext<uCParser::PrintlnStatementContext>(0);
}

uCParser::ReadStatementContext* uCParser::StatementContext::readStatement() {
  return getRuleContext<uCParser::ReadStatementContext>(0);
}

uCParser::ReadlnStatementContext* uCParser::StatementContext::readlnStatement() {
  return getRuleContext<uCParser::ReadlnStatementContext>(0);
}

uCParser::FunctionCallContext* uCParser::StatementContext::functionCall() {
  return getRuleContext<uCParser::FunctionCallContext>(0);
}

uCParser::ReturnStatementContext* uCParser::StatementContext::returnStatement() {
  return getRuleContext<uCParser::ReturnStatementContext>(0);
}


size_t uCParser::StatementContext::getRuleIndex() const {
  return uCParser::RuleStatement;
}


antlrcpp::Any uCParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<uCVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

uCParser::StatementContext* uCParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, uCParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(145);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(136);
      assignmentStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(137);
      variableDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(138);
      controlStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(139);
      printStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(140);
      printlnStatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(141);
      readStatement();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(142);
      readlnStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(143);
      functionCall();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(144);
      returnStatement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EmptyStatementContext ------------------------------------------------------------------

uCParser::EmptyStatementContext::EmptyStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t uCParser::EmptyStatementContext::getRuleIndex() const {
  return uCParser::RuleEmptyStatement;
}


antlrcpp::Any uCParser::EmptyStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<uCVisitor*>(visitor))
    return parserVisitor->visitEmptyStatement(this);
  else
    return visitor->visitChildren(this);
}

uCParser::EmptyStatementContext* uCParser::emptyStatement() {
  EmptyStatementContext *_localctx = _tracker.createInstance<EmptyStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, uCParser::RuleEmptyStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);

   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

uCParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

uCParser::TypeIdentifierContext* uCParser::VariableDeclarationContext::typeIdentifier() {
  return getRuleContext<uCParser::TypeIdentifierContext>(0);
}

std::vector<uCParser::VariableIdentifierContext *> uCParser::VariableDeclarationContext::variableIdentifier() {
  return getRuleContexts<uCParser::VariableIdentifierContext>();
}

uCParser::VariableIdentifierContext* uCParser::VariableDeclarationContext::variableIdentifier(size_t i) {
  return getRuleContext<uCParser::VariableIdentifierContext>(i);
}

std::vector<uCParser::LengthContext *> uCParser::VariableDeclarationContext::length() {
  return getRuleContexts<uCParser::LengthContext>();
}

uCParser::LengthContext* uCParser::VariableDeclarationContext::length(size_t i) {
  return getRuleContext<uCParser::LengthContext>(i);
}


size_t uCParser::VariableDeclarationContext::getRuleIndex() const {
  return uCParser::RuleVariableDeclaration;
}


antlrcpp::Any uCParser::VariableDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<uCVisitor*>(visitor))
    return parserVisitor->visitVariableDeclaration(this);
  else
    return visitor->visitChildren(this);
}

uCParser::VariableDeclarationContext* uCParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, uCParser::RuleVariableDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(169);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(149);
      typeIdentifier();
      setState(150);
      variableIdentifier();
      setState(155);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == uCParser::T__1) {
        setState(151);
        match(uCParser::T__1);
        setState(152);
        variableIdentifier();
        setState(157);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(158);
      typeIdentifier();
      setState(159);
      variableIdentifier();
      setState(166);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == uCParser::T__2) {
        setState(160);
        match(uCParser::T__2);
        setState(161);
        length();
        setState(162);
        match(uCParser::T__3);
        setState(168);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LengthContext ------------------------------------------------------------------

uCParser::LengthContext::LengthContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

uCParser::ExpressionContext* uCParser::LengthContext::expression() {
  return getRuleContext<uCParser::ExpressionContext>(0);
}


size_t uCParser::LengthContext::getRuleIndex() const {
  return uCParser::RuleLength;
}


antlrcpp::Any uCParser::LengthContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<uCVisitor*>(visitor))
    return parserVisitor->visitLength(this);
  else
    return visitor->visitChildren(this);
}

uCParser::LengthContext* uCParser::length() {
  LengthContext *_localctx = _tracker.createInstance<LengthContext>(_ctx, getState());
  enterRule(_localctx, 10, uCParser::RuleLength);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(171);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentStatementContext ------------------------------------------------------------------

uCParser::AssignmentStatementContext::AssignmentStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t uCParser::AssignmentStatementContext::getRuleIndex() const {
  return uCParser::RuleAssignmentStatement;
}

void uCParser::AssignmentStatementContext::copyFrom(AssignmentStatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AssignVariableContext ------------------------------------------------------------------

uCParser::LhsContext* uCParser::AssignVariableContext::lhs() {
  return getRuleContext<uCParser::LhsContext>(0);
}

uCParser::RhsContext* uCParser::AssignVariableContext::rhs() {
  return getRuleContext<uCParser::RhsContext>(0);
}

uCParser::AssignVariableContext::AssignVariableContext(AssignmentStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any uCParser::AssignVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<uCVisitor*>(visitor))
    return parserVisitor->visitAssignVariable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DecrementVariableContext ------------------------------------------------------------------

uCParser::VariableContext* uCParser::DecrementVariableContext::variable() {
  return getRuleContext<uCParser::VariableContext>(0);
}

uCParser::DecrementVariableContext::DecrementVariableContext(AssignmentStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any uCParser::DecrementVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<uCVisitor*>(visitor))
    return parserVisitor->visitDecrementVariable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IncrementVariableContext ------------------------------------------------------------------

uCParser::VariableContext* uCParser::IncrementVariableContext::variable() {
  return getRuleContext<uCParser::VariableContext>(0);
}

uCParser::IncrementVariableContext::IncrementVariableContext(AssignmentStatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any uCParser::IncrementVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<uCVisitor*>(visitor))
    return parserVisitor->visitIncrementVariable(this);
  else
    return visitor->visitChildren(this);
}
uCParser::AssignmentStatementContext* uCParser::assignmentStatement() {
  AssignmentStatementContext *_localctx = _tracker.createInstance<AssignmentStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, uCParser::RuleAssignmentStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(183);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<AssignmentStatementContext *>(_tracker.createInstance<uCParser::AssignVariableContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(173);
      lhs();
      setState(174);
      match(uCParser::T__4);
      setState(175);
      rhs();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<AssignmentStatementContext *>(_tracker.createInstance<uCParser::IncrementVariableContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(177);
      variable();
      setState(178);
      match(uCParser::T__5);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<AssignmentStatementContext *>(_tracker.createInstance<uCParser::DecrementVariableContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(180);
      variable();
      setState(181);
      match(uCParser::T__6);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LhsContext ------------------------------------------------------------------

uCParser::LhsContext::LhsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

uCParser::VariableContext* uCParser::LhsContext::variable() {
  return getRuleContext<uCParser::VariableContext>(0);
}

uCParser::VariableDeclarationContext* uCParser::LhsContext::variableDeclaration() {
  return getRuleContext<uCParser::VariableDeclarationContext>(0);
}


size_t uCParser::LhsContext::getRuleIndex() const {
  return uCParser::RuleLhs;
}


antlrcpp::Any uCParser::LhsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<uCVisitor*>(visitor))
    return parserVisitor->visitLhs(this);
  else
    return visitor->visitChildren(this);
}

uCParser::LhsContext* uCParser::lhs() {
  LhsContext *_localctx = _tracker.createInstance<LhsContext>(_ctx, getState());
  enterRule(_localctx, 14, uCParser::RuleLhs);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(187);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case uCParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(185);
        variable();
        break;
      }

      case uCParser::INT:
      case uCParser::BOOL:
      case uCParser::FLOAT:
      case uCParser::VOID: {
        enterOuterAlt(_localctx, 2);
        setState(186);
        variableDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RhsContext ------------------------------------------------------------------

uCParser::RhsContext::RhsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

uCParser::ExpressionContext* uCParser::RhsContext::expression() {
  return getRuleContext<uCParser::ExpressionContext>(0);
}


size_t uCParser::RhsContext::getRuleIndex() const {
  return uCParser::RuleRhs;
}


antlrcpp::Any uCParser::RhsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<uCVisitor*>(visitor))
    return parserVisitor->visitRhs(this);
  else
    return visitor->visitChildren(this);
}

uCParser::RhsContext* uCParser::rhs() {
  RhsContext *_localctx = _tracker.createInstance<RhsContext>(_ctx, getState());
  enterRule(_localctx, 16, uCParser::RuleRhs);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(189);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ControlScopeContext ------------------------------------------------------------------

uCParser::ControlScopeContext::ControlScopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<uCParser::C_statementContext *> uCParser::ControlScopeContext::c_statement() {
  return getRuleContexts<uCParser::C_statementContext>();
}

uCParser::C_statementContext* uCParser::ControlScopeContext::c_statement(size_t i) {
  return getRuleContext<uCParser::C_statementContext>(i);
}

std::vector<uCParser::ControlStatementContext *> uCParser::ControlScopeContext::controlStatement() {
  return getRuleContexts<uCParser::ControlStatementContext>();
}

uCParser::ControlStatementContext* uCParser::ControlScopeContext::controlStatement(size_t i) {
  return getRuleContext<uCParser::ControlStatementContext>(i);
}


size_t uCParser::ControlScopeContext::getRuleIndex() const {
  return uCParser::RuleControlScope;
}


antlrcpp::Any uCParser::ControlScopeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<uCVisitor*>(visitor))
    return parserVisitor->visitControlScope(this);
  else
    return visitor->visitChildren(this);
}

uCParser::ControlScopeContext* uCParser::controlScope() {
  ControlScopeContext *_localctx = _tracker.createInstance<ControlScopeContext>(_ctx, getState());
  enterRule(_localctx, 18, uCParser::RuleControlScope);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(191);
    match(uCParser::T__7);
    setState(196);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << uCParser::T__0)
      | (1ULL << uCParser::T__7)
      | (1ULL << uCParser::INT)
      | (1ULL << uCParser::BOOL)
      | (1ULL << uCParser::FLOAT)
      | (1ULL << uCParser::VOID)
      | (1ULL << uCParser::DO)
      | (1ULL << uCParser::WHILE)
      | (1ULL << uCParser::FOR)
      | (1ULL << uCParser::IF)
      | (1ULL << uCParser::SWITCH)
      | (1ULL << uCParser::PRINT)
      | (1ULL << uCParser::PRINTLN)
      | (1ULL << uCParser::READ)
      | (1ULL << uCParser::READLN)
      | (1ULL << uCParser::RETURN)
      | (1ULL << uCParser::IDENTIFIER))) != 0)) {
      setState(194);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
      case 1: {
        setState(192);
        c_statement();
        break;
      }

      case 2: {
        setState(193);
        controlStatement();
        break;
      }

      }
      setState(198);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(199);
    match(uCParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ControlStatementContext ------------------------------------------------------------------

uCParser::ControlStatementContext::ControlStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

uCParser::DoWhileLoopContext* uCParser::ControlStatementContext::doWhileLoop() {
  return getRuleContext<uCParser::DoWhileLoopContext>(0);
}

uCParser::WhileLoopContext* uCParser::ControlStatementContext::whileLoop() {
  return getRuleContext<uCParser::WhileLoopContext>(0);
}

uCParser::ForLoopContext* uCParser::ControlStatementContext::forLoop() {
  return getRuleContext<uCParser::ForLoopContext>(0);
}

uCParser::IfStatementContext* uCParser::ControlStatementContext::ifStatement() {
  return getRuleContext<uCParser::IfStatementContext>(0);
}

uCParser::SwitchStatementContext* uCParser::ControlStatementContext::switchStatement() {
  return getRuleContext<uCParser::SwitchStatementContext>(0);
}
